Moved todo list to ghp

--- a/index.html
+++ b/index.html
@@ -34,10 +34,24 @@
 	<article>
 	  <h2>Things to add</h2>
 	  <ul class="todolist">
-		  <li><input type="checkbox">&nbsp;<b><abbr type="Meteorological Terminal Aviation Routine Weather Report">METAR</a> Support</b> - See if we can get <a href="https://en.wikipedia.org/wiki/METAR">METAR</a> data. (I'd at least like to create a <code>.json</code> file to decrypt METAR data.)</li>
-		  <li><input type="checkbox">&nbsp;<b><abbr type="Common Alerting Protocol">CAP</abbr> Support</b> - Is it worth adding <a href="https://en.wikipedia.org/wiki/Common_Alerting_Protocol">CAP</a>?</li>
-		  >li><input type="checkbox">&nbsp;<b>A better stylesheet than Blitz</b> - Blitz has got this sorta ungly cyan thing going at the moment. I want Cloudburst to have a little more of a violet flare to it.</li>
-	  </ul>
+		<li><input type="checkbox">&nbsp;<b><abbr type="Meteorological Terminal Aviation Routine Weather Report">METAR</a> Support</b> - See if we can get <a href="https://en.wikipedia.org/wiki/METAR">METAR</a> data. (I'd at least like to create a <code>.json</code> file to decrypt METAR data.)</li>
+		<li><input type="checkbox">&nbsp;<b><abbr type="Common Alerting Protocol">CAP</abbr> Support</b> - Is it worth adding <a href="https://en.wikipedia.org/wiki/Common_Alerting_Protocol">CAP</a>?</li>
+		<li><input type="checkbox">&nbsp;<b>A better stylesheet than Blitz</b> - Blitz has got this sorta ungly cyan thing going at the moment. I want Cloudburst to have a little more of a violet flare to it.</li>
+<li><input type="checkbox">&nbsp;Tide Calculator</li>
+<li><input type="checkbox">&nbsp;Moon phases/moon rise/moon set</li>
+<li><input type="checkbox">&nbsp;Eclipse finder (solar and lunar)</li>
+<li><input type="checkbox">&nbsp;Earthquake summary (See what's shaking within a specific radius)</li>
+<li><input type="checkbox">&nbsp;Sunrise and Sunset for other days and locations</li>
+<li><input type="checkbox">&nbsp;Better time zone support and date/time input</li>
+<li><input type="checkbox">&nbsp;METAR style output (single line)</li>
+<li><input type="checkbox">&nbsp;EAS Protocol support (Better warnings, at least in North America.)</li>
+<li><input type="checkbox">&nbsp;Better support for metric.</li>
+<li><input type="checkbox">&nbsp;Tsunami/Volcano check</li>
+<li><input type="checkbox">&nbsp;COLORS!</li>
+<li><input type="checkbox">&nbsp;NOAA Weather Radio Database using JSON. (See <a href="doc/ccl.md">CCL</a>) </li>
+<li><input type="checkbox">&nbsp;Some cool <a href="http://www.figlet.org/">figlet</a> and/or <a href="https://boxes.thomasjensen.com/">boxes</a> logo</li>
+		</ul>
+		<p>Most of that will be command line and scraping the web.</p>
 	</article>
   </main>
   <hr>
