Almost forgot to do some stuff

--- a/index.html
+++ b/index.html
@@ -34,24 +34,24 @@
 	<article>
 	  <h2>Things to add</h2>
 	  <ul class="todolist">
-		<li><input type="checkbox">&nbsp;<b><abbr type="Meteorological Terminal Aviation Routine Weather Report">METAR</a> Support</b> - See if we can get <a href="https://en.wikipedia.org/wiki/METAR">METAR</a> data. (I'd at least like to create a <code>.json</code> file to decrypt METAR data.)</li>
+		<li><input type="checkbox">&nbsp;<b><abbr type="Meteorological Terminal Aviation Routine Weather Report">METAR</a> Support</b> - See if we can get <a href="https://en.wikipedia.org/wiki/METAR">METAR</a> data. (I'd at least like to create a <code>.json</code> file to decrypt METAR data.) This could be output on one line.</li>
 		<li><input type="checkbox">&nbsp;<b><abbr type="Common Alerting Protocol">CAP</abbr> Support</b> - Is it worth adding <a href="https://en.wikipedia.org/wiki/Common_Alerting_Protocol">CAP</a>?</li>
 		<li><input type="checkbox">&nbsp;<b>A better stylesheet than Blitz</b> - Blitz has got this sorta ungly cyan thing going at the moment. I want Cloudburst to have a little more of a violet flare to it.</li>
-<li><input type="checkbox">&nbsp;Tide Calculator</li>
-<li><input type="checkbox">&nbsp;Moon phases/moon rise/moon set</li>
-<li><input type="checkbox">&nbsp;Eclipse finder (solar and lunar)</li>
-<li><input type="checkbox">&nbsp;Earthquake summary (See what's shaking within a specific radius)</li>
-<li><input type="checkbox">&nbsp;Sunrise and Sunset for other days and locations</li>
-<li><input type="checkbox">&nbsp;Better time zone support and date/time input</li>
-<li><input type="checkbox">&nbsp;METAR style output (single line)</li>
-<li><input type="checkbox">&nbsp;EAS Protocol support (Better warnings, at least in North America.)</li>
-<li><input type="checkbox">&nbsp;Better support for metric.</li>
-<li><input type="checkbox">&nbsp;Tsunami/Volcano check</li>
-<li><input type="checkbox">&nbsp;COLORS!</li>
-<li><input type="checkbox">&nbsp;NOAA Weather Radio Database using JSON. (See <a href="doc/ccl.md">CCL</a>) </li>
-<li><input type="checkbox">&nbsp;Some cool <a href="http://www.figlet.org/">figlet</a> and/or <a href="https://boxes.thomasjensen.com/">boxes</a> logo</li>
-		</ul>
-		<p>Most of that will be command line and scraping the web.</p>
+		<li><input type="checkbox">&nbsp;<b>Tide Calculator</b> - Useless to folks inland, but might be useful for coastal users.</li>
+		<li><input type="checkbox">&nbsp;<b>Moon phases/moon rise/moon set</b> - Get info about the Moon.</li>
+		<li><input type="checkbox">&nbsp;<b>Eclipse finder</b> - solar and lunar.</li>
+		<li><input type="checkbox">&nbsp;<b>Earthquake summary</b> - See what's shaking within a specific radius</li>
+		<li><input type="checkbox">&nbsp;<b>Sunrise and Sunset for other days and locations</b> - we can get today. Other days need work.</li>
+		<li><input type="checkbox">&nbsp;<b>Altitude/Elevation</b> - It varies from place to place.</li>	
+		<li><input type="checkbox">&nbsp;<b>Better time zone support and date/time input</b> - For now, I might want to limit this to the US. I'll work on other places later.</li>
+		<li><input type="checkbox">&nbsp;<b>EAS Protocol support</b> - Better warnings, at least in North America.</li>
+		<li><input type="checkbox">&nbsp;<b>Better support for metric.</b></li>
+		<li><input type="checkbox">&nbsp;<b>Tsunami/Volcano check.</b></li>
+		<li><input type="checkbox">&nbsp;<b><span style="color:#f00;">C</span><span style="color:#f80;">O</span><span style="color:#ff0;">L</span><span style="color:#f00;">O</span><span style="color:#0f0;">R</span><span style="color:#00f;">S</span><span style="color:#f0f;">!</span></b> - Make it look pretty!</li>
+		<li><input type="checkbox">&nbsp;<b>NOAA Weather Radio Database using JSON.</b> - See <a href="doc/ccl.md">CCL</a>.</li>
+		<li><input type="checkbox">&nbsp;<b>Some cool <a href="http://www.figlet.org/">figlet</a> and/or <a href="https://boxes.thomasjensen.com/">boxes</a> logo</b> - Something cool.</li>
+	  </ul>
+	  <p>Most of that will be command line and scraping the web.</p>
 	</article>
   </main>
   <hr>
